--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_list"
+    android:id="@+id/layout"
     tools:context=".MainActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/bike" />
-
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Bike Tracker"
-            android:textSize="45sp"
-            android:layout_margin="60dp"
-            android:layout_marginTop="70dp"
-            android:textStyle="bold"
-            android:textColor="?attr/colorPrimaryDark"/>
-    </LinearLayout>
+        android:fontFamily="sans-serif"
+        android:text="Bike Tracker"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="@color/colorPrimaryNight"
+        android:textSize="40sp"
+        android:layout_marginTop="60dp"
+        android:padding="65dp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/imageBike"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:src="@drawable/bikedet" />
+
+
+
 </FrameLayout>
